Updated with controllers, repos, entities and domain classes
